Added interfaces for basic game objects

--- a/Game/GameWindows/GameWindows.csproj
+++ b/Game/GameWindows/GameWindows.csproj
@@ -39,6 +39,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="GameStart.cs" />
+    <Compile Include="Game\Base\ICreature.cs" />
+    <Compile Include="Game\Enemy\IEnemy.cs" />
+    <Compile Include="Game\Base\IMovable.cs" />
+    <Compile Include="Game\Base\IObject.cs" />
+    <Compile Include="Game\Player\IPlayer.cs" />
+    <Compile Include="Game\Base\IStatic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
